// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] components/Tags/<Tag /> should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH Tag__Container-lc1n3o-0 dVwbtb"
  >
    <span
      class="Tag__Text-lc1n3o-1 dtXAeC"
    >
      A Tag
    </span>
    <img
      alt="Bouton ouvrant l'url de le tag A Tag"
      class="Tag__Button-lc1n3o-2 jbGhej"
      src="[object Object]"
    />
    <img
      alt="Bouton supprimant le tag A Tag"
      class="Tag__Button-lc1n3o-2 jbGhej"
      src="[object Object]"
    />
  </div>
</div>
`;

exports[`[Contrib] components/Tags/<Tag /> should match snapshot with an undefined \`ariaName\` prop 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH Tag__Container-lc1n3o-0 dVwbtb"
  >
    <span
      class="Tag__Text-lc1n3o-1 dtXAeC"
    >
      A Tag
    </span>
    <img
      alt="Bouton ouvrant l'url de l'étiquette A Tag"
      class="Tag__Button-lc1n3o-2 jbGhej"
      src="[object Object]"
    />
    <img
      alt="Bouton supprimant l'étiquette A Tag"
      class="Tag__Button-lc1n3o-2 jbGhej"
      src="[object Object]"
    />
  </div>
</div>
`;
